Add Cybersecurity Consulting to services and projects

--- a/landing/index.html
+++ b/landing/index.html
@@ -33,7 +33,7 @@
                 <div class="flex flex-col sm:flex-row space-y-4 sm:space-y-0 sm:space-x-6 items-center">
                     <a href="#services" class="text-gray-800 hover:text-primary transition-colors">Services</a>
                     <a href="#projects" class="text-gray-800 hover:text-primary transition-colors">Projects</a>
-                    <a href="https://cal.com/daniel-omusula" target="_blank" rel="noopener noreferrer" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 transition-colors w-full sm:w-auto text-center">Let's Talk</a>
+                    <a href="https://cal.com/brian-okechi" target="_blank" rel="noopener noreferrer" class="bg-primary text-white px-4 py-2 rounded hover:bg-opacity-90 transition-colors w-full sm:w-auto text-center">Let's Talk</a>
                 </div>
             </nav>
         </div>
@@ -45,7 +45,7 @@
             <div class="container mx-auto px-4 text-center">
                 <h1 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 sm:mb-6">Transform Your Business with Trusted Custom Software Solutions</h1>
                 <p class="text-lg sm:text-xl mb-6 sm:mb-8">We help businesses boost their efficiency through powerful, custom enterprise software that delivers measurable results.</p>
-                <a href="https://cal.com/daniel-omusula" target="_blank" rel="noopener noreferrer" class="inline-block bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Discuss Your Project</a>
+                <a href="https://cal.com/brian-okechi" target="_blank" rel="noopener noreferrer" class="inline-block bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Discuss Your Project</a>
             </div>
         </section>
 
@@ -67,7 +67,7 @@
             <div class="dot-pattern"></div>
             <div class="container mx-auto px-4">
                 <h2 class="text-2xl sm:text-3xl font-bold text-center mb-8 sm:mb-12">Our Services</h2>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 sm:gap-8">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-5 gap-6 sm:gap-8">
                     <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
                         <h3 class="text-xl sm:text-2xl font-semibold mb-3 text-primary">Custom Software Development</h3>
                         <p class="text-gray-800">We build tailored software solutions that perfectly align with your business processes and growth objectives.</p>
@@ -83,6 +83,10 @@
                     <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
                         <h3 class="text-xl sm:text-2xl font-semibold mb-3 text-primary">AI Solutions</h3>
                         <p class="text-gray-800">We work with your data to create intelligent automation that saves you time and money</p>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
+                        <h3 class="text-xl sm:text-2xl font-semibold mb-3 text-primary">Cybersecurity Consulting</h3>
+                        <p class="text-gray-800">Protect your digital assets with our expert cybersecurity consulting services. We help you identify vulnerabilities, implement robust security measures, and ensure compliance.</p>
                     </div>
                 </div>
             </div>
@@ -202,12 +206,51 @@
                                     <svg class="w-4 h-4 text-primary mr-2" fill="currentColor" viewBox="0 0 20 20">
                                         <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
                                     </svg>
-                                    Intelligent Reporting
+                                    Comprehensive Reporting
                                 </li>
                             </ul>
                         </div>
-                        <a href="https://github.com/gTahidi/herbie" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-primary hover:underline">
-                            View on GitHub
+                        <a href="https://herbieai.com/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-primary hover:underline">
+                            Learn More
+                            <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
+                            </svg>
+                        </a>
+                    </div>
+                    <div class="bg-white p-6 rounded-lg border border-gray-200 hover:shadow-lg transition-shadow">
+                        <div class="flex items-center mb-4">
+                            <div class="w-12 h-12 bg-primary/10 rounded-lg flex items-center justify-center mr-4">
+                                <svg class="w-6 h-6 text-primary" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path>
+                                </svg>
+                            </div>
+                            <h3 class="text-xl sm:text-2xl font-semibold text-primary">Cybersecurity Consulting</h3>
+                        </div>
+                        <p class="text-gray-800 mb-4">Strengthen your defenses against cyber threats. Our comprehensive consulting services cover risk assessment, strategy development, and incident response planning.</p>
+                        <div class="bg-gray-50 p-4 rounded-lg mb-4">
+                            <ul class="space-y-2 text-sm">
+                                <li class="flex items-center">
+                                    <svg class="w-4 h-4 text-primary mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
+                                    </svg>
+                                    Vulnerability Assessments
+                                </li>
+                                <li class="flex items-center">
+                                    <svg class="w-4 h-4 text-primary mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
+                                    </svg>
+                                    Security Policy Development
+                                </li>
+                                <li class="flex items-center">
+                                    <svg class="w-4 h-4 text-primary mr-2" fill="currentColor" viewBox="0 0 20 20">
+                                        <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"></path>
+                                    </svg>
+                                    Incident Response Planning
+                                </li>
+                            </ul>
+                        </div>
+                        <a href="#contact" class="inline-flex items-center text-primary hover:underline">
+                            Secure Your Business
                             <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path>
                             </svg>
@@ -288,7 +331,7 @@
         <section id="contact" class="py-12 sm:py-20">
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-2xl sm:text-3xl font-bold mb-8">Let's Discuss Your Project</h2>
-                <a href="https://cal.com/daniel-omusula" target="_blank" rel="noopener noreferrer" class="bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Talk to Us</a>
+                <a href="https://cal.com/brian-okechi" target="_blank" rel="noopener noreferrer" class="bg-primary text-white px-6 py-3 rounded-lg text-lg hover:bg-opacity-90 transition-colors">Talk to Us</a>
             </div>
             
     <script>
@@ -312,28 +355,6 @@
 
         <hr class="border-t border-gray-200 my-12 mx-auto max-w-4xl">
 
-        <section class="py-12 sm:py-20">
-            <div class="container mx-auto px-4">
-                <h2 class="text-2xl sm:text-3xl font-bold text-center mb-12">Our Founders</h2>
-                <div class="flex justify-center space-x-12">
-                    <div class="text-center">
-                        <img src="assets/team/Brian-Okechi.jpg" alt="Brian Okechi" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-                        <h3 class="text-xl sm:text-2xl font-semibold">Brian Okechi</h3>
-                        <p class="text-gray-800">Founding Engineer</p>
-                    </div>
-                    <div class="text-center">
-                        <img src="assets/team/Daniel-Omusula.jpg" alt="Daniel Omusula" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-                        <h3 class="text-xl sm:text-2xl font-semibold">Daniel Omusula</h3>
-                        <p class="text-gray-800">Founding Engineer</p>
-                    </div>
-                    <div class="text-center">
-                        <img src="assets/team/Emily-Kareji.jpg" alt="Emily Kareji" class="w-32 h-32 rounded-full mx-auto mb-4 object-cover">
-                        <h3 class="text-xl sm:text-2xl font-semibold">Emily Kareji</h3>
-                        <p class="text-gray-800">Marketing Lead</p>
-                    </div>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="bg-gray-800 text-white py-12">
